# Foxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: cli.rs  fs.rs  main.rs  sys.rs
