[package]
name = "foxy"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/lethalbit/foxy"
description = "FUSE-base file proxy with CoW capabilities"

[dependencies]
clap = "4.5.47"
color-eyre = "0.6.5"
color-print = "0.3.7"
console-subscriber = "0.4.1"
eyre = "0.6.12"
fuser = "0.15.1"
libc = "0.2.175"
memmap2 = "0.9.8"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "tracing"] }
tokio-util = { version = "0.7.16", features = ["rt", "time", "tracing"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-error = { version = "0.2.1", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "ansi", "registry", "json"] }
